# memecoin-agent

./: .gitignore  COLLABORATION.md  README.md  Testing.md  package-lock.json
backend/: .env  TelegramBot.md  package-lock.json  package.json
backend/ai/: pyproject.toml  requirements.txt
backend/ai/config/: general.yaml  system_prompt.yaml
backend/ai/src/: config.py  logger.py  main.py
backend/ai/src/agent/: agent.py  prompt.py  utils.py
backend/ai/src/agent/tools/: functions.py  handler.py
backend/src/: ai.ts  aiChat.ts  aiFeatures.ts  blockchain.ts  huggingFaceStableDiffusion.js  huggingFaceStableDiffusion.ts  index.ts  miniGame.ts  nearIntegration.ts  telegram.ts  telegramBot.ts  twitter.ts  twitterBot.ts
client/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
client/app/: globals.css  layout.tsx  page.tsx  providers.tsx  socket.ts
client/app/components/: Chat.css  Chat.tsx  CursorTrail.tsx  Dashboard.tsx  Features.tsx  HelloNear.tsx  LoadingScreen.tsx  Navbar.tsx  Navigation.tsx  SetGreeting.tsx
client/app/dashboard/: page.tsx  useNearAnalytics.ts  useNearAnalyticsFromAccount.client.ts
client/config/: wagmi.ts
memecoin-contract/: Cargo.toml
memecoin-contract/src/: lib.rs
